  The leafmost dictionary has the keys 'added', 'removed', and 'moved.

  In the 'unreduced' dictionary, *all* meld tags that have been added,
  removed, or moved are present (this was the behavior of diffmeld
  previously).  In the 'reduced' dictionary, the added, removed, and
  moved values are reduced to the smallest number of tags which share
  a common lineage.

0.4

  The clone() method of elements copied neither the text nor the tail
  of the element (this is what caused markup created by "repeats" to
  fall all on one line).

  Add diffing capability to meld nodes.  The file 'melddiff.py' shows an
  example of using the diff API.

  Add a 'meldid()' method to elements.  This returns None if the element
  has no meld id, otherwise it returns the id.

  Add a 'fillmeld(**kw)' method to elements.  This does the same thing
  as '__mod__' but returns meld ids (the keys of **kw) that cannot be
  found anywhere in the tree.

  Make source distro into a distutils-installable package.

0.3

  Fix broken example.py file.

  Add ZPT-alike methods on elements: 'content', 'replace', and
  'attributes'.  'content' replaces the node's content; 'replace'
  replaces the node itself with a text value, and 'attributes' sets
  the attributes of the node.  Using the ElementTree API to do the
  same things usually causes the code to run faster, but these
  functions are more convenient and more easily grokked by ZPT people.

  Override __delitem__ on meld elements in order to relieve deleted
  items of their parent pointers.

  Strip all xhtml namespace identifiers out of XHTML output.  Browsers
  just can't deal with this.

  Undocumented element API method 'remove' renamed to 'deparent' (it
  was shadowing an ElementTree API method).

  Documentation improvements and change examples to use ZPT-alike
  methods.

  Add support for HTML input files.  Input files don't need to be
  strictly well-formed XML anymore.
